[Enh]: Added route to `/server/:serverId/:channelId`
Added routes to `/server/:serverId/:channelId` and implemented tabs from headless ui into inbox popup.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,6 +8,18 @@
   }
 }
 
+::-webkit-scrollbar{
+  width: 5px;
+}
+
+::-webkit-scrollbar-track{
+  @apply bg-arsenic;
+}
+
+::-webkit-scrollbar-thumb{
+  @apply bg-raisin-black rounded-sm;
+}
+
 .loading {
   pointer-events: none;
   display: inline-block;
